fixed; change background color

--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,6 +1,6 @@
 .root {
     margin: auto;
-    background-color: #000D26;
+    background-color: #001337;
     font-family: 'Open Sans', 'Arial', sans-serif;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
