--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,13 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts.css);
 
+@import url(../blocks/main/main.css);
+
 @import url(../blocks/root/root.css);
+
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__wrapper/lead__wrapper.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__span-accent/lead__span-accent.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/lead/__link/lead__link.css);
