--- a/blocks/ai-research/__button/ai-research__button.css
+++ b/blocks/ai-research/__button/ai-research__button.css
@@ -1,5 +1,5 @@
 .ai-research__button {
-    background-color: #FFFFFF;
+    background-color: rgba(255, 255, 255, 0);
     font-size: 10px;
     line-height: 14px;
     font-weight: 600;
@@ -8,4 +8,24 @@
     border-radius: 5px;
     margin: 0 0 10px 0;
     padding: 9px 31.5px;
+    position: relative;
+    z-index: 2;
+}
+
+@media screen and (min-width: 768px) {
+    .ai-research__button {
+        margin: 0 0 11.4px 0;
+        padding: 9px 34.75px;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .ai-research__button {
+        font-size: 14px;
+        line-height: 19px;
+        font-weight: 400;
+        border-radius: 10px;
+        margin: 0 0 20px 0;
+        padding: 10.5px 69px;
+    }
 }
