--- a/blocks/ai-research/__icon/ai-research__icon.css
+++ b/blocks/ai-research/__icon/ai-research__icon.css
@@ -3,3 +3,19 @@
     height: 19.43px;
     margin: 10.29px;
 }
+
+@media screen and (min-width: 768px) {
+    .ai-research__icon {
+        width: 20px;
+        height: 20px;
+        margin: 10.59px;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .ai-research__icon {
+        width: 34px;
+        height: 34px;
+        margin: 18px;
+    }
+}
