--- a/blocks/ai-research/__logo/ai-research__logo.css
+++ b/blocks/ai-research/__logo/ai-research__logo.css
@@ -1,7 +1,27 @@
 .ai-research__logo {
     width: 40px;
     height: 40px;
-    box-shadow: 0  0 11.22px rgba(1,54,157,0.15);
+    background-color: #FFF;
+    box-shadow: 0  2.24px 11.22px rgba(1,54,157,0.15);
     border-radius: 100%;
     margin: 16px auto;
+    position: relative;
+    z-index: 2;
+}
+
+@media screen and (min-width: 768px) {
+    .ai-research__logo {
+        width: 42px;
+        height: 42px;
+        box-shadow: 0  4px 20px rgba(1,54,157,0.15);
+        margin: 20px auto;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .ai-research__logo {
+        width: 70px;
+        height: 70px;
+        margin: 20px auto;
+    }
 }
