--- a/blocks/ai-research/__paragraph/ai-research__paragraph.css
+++ b/blocks/ai-research/__paragraph/ai-research__paragraph.css
@@ -7,3 +7,20 @@
     margin: 0 auto 20px auto;
     padding: 0;
 }
+
+@media screen and (min-width: 768px) {
+    .ai-research__paragraph {
+        max-width: 330px;
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: 0.1px;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .ai-research__paragraph {
+        max-width: 540px;
+        font-size: 18px;
+        line-height: 30px;
+    }
+}
