--- a/blocks/ai-research/__title/ai-research__title.css
+++ b/blocks/ai-research/__title/ai-research__title.css
@@ -6,3 +6,20 @@
     margin: 0 auto;
     padding: 0;
 }
+
+@media screen and (min-width: 768px) {
+    .ai-research__title {
+        max-width: 690px;
+        font-size: 24px;
+        line-height: 33px;
+        letter-spacing: 0.1px
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .ai-research__title {
+        max-width: 1146px;
+        font-size: 36px;
+        line-height: 68px;
+    }
+}
