--- a/pages/index.css
+++ b/pages/index.css
@@ -11,11 +11,20 @@
 @import url(../blocks/ai-research/ai-research.css);
 @import url(../blocks/ai-research/__title/ai-research__title.css);
 @import url(../blocks/ai-research/__title/_type/ai-research__title_type_page.css);
+@import url(../blocks/ai-research/__wrapper/ai-research__wrapper.css);
+@import url(../blocks/ai-research/__row-image/ai-research__row-image.css);
 @import url(../blocks/ai-research/__image/ai-research__image.css);
+@import url(../blocks/ai-research/__image/_active/ai-research__image_active.css);
+@import url(../blocks/ai-research/__column-text/ai-research__column-text.css);
 @import url(../blocks/ai-research/__paragraph/ai-research__paragraph.css);
 @import url(../blocks/ai-research/__paragraph/_type/ai-research__paragraph_type_page.css);
+@import url(../blocks/ai-research/__paragraph/_type/ai-research__paragraph_type_light.css);
 @import url(../blocks/ai-research/__cards/ai-research__cards.css);
 @import url(../blocks/ai-research/__card/ai-research__card.css);
+@import url(../blocks/ai-research/__card/_type/ai-research__card_type_project.css);
+@import url(../blocks/ai-research/__card/_type/ai-research__card_type_machine-learning.css);
+@import url(../blocks/ai-research/__card/_type/ai-research__card_type_data.css);
+@import url(../blocks/ai-research/__card/_type/ai-research__card_type_QA.css);
 @import url(../blocks/ai-research/__title/_type/ai-research__title_type_card.css);
 @import url(../blocks/ai-research/__logo/ai-research__logo.css);
 @import url(../blocks/ai-research/__icon/ai-research__icon.css);
