--- a/blocks/main/main.css
+++ b/blocks/main/main.css
@@ -5,3 +5,10 @@
     font-size: 12px;
     line-height: 16px;
 }
+
+@media screen and (min-width: 760px) {
+    .main {
+        font-size: 14px;
+        line-height: 19px;
+    }
+}
