fix: paths to images

--- a/blocks/about/__button-arrow/_left/about__button-arrow_left.css
+++ b/blocks/about/__button-arrow/_left/about__button-arrow_left.css
@@ -14,7 +14,7 @@
         top: 116px;
         border: none;
         border-radius: 50%;
-        background-image: url("../images/about/arrow-left.svg");
+        background-image: url("../../../../images/about/arrow-left.svg");
         background-size: 36px 36px;
         background-repeat: no-repeat;
         background-position: center;
