--- a/blocks/about/__card/about__card.css
+++ b/blocks/about/__card/about__card.css
@@ -16,7 +16,7 @@
     position: absolute;
     top: -12px;
     right: -10px;
-    background-image: url("../images/about/pin.svg");
+    background-image: url("../../../images/about/pin.svg");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
