--- a/blocks/about/__button-arrow/_right/about__button-arrow_right.css
+++ b/blocks/about/__button-arrow/_right/about__button-arrow_right.css
@@ -9,7 +9,7 @@
     top: 116px;
     border: none;
     border-radius: 50%;
-    background-image: url("../images/about/arrow-right.svg");
+    background-image: url("../../../../images/about/arrow-right.svg");
     background-size: 36px 36px;
     background-repeat: no-repeat;
     background-position: center;
