--- a/blocks/about/__button-arrow/about__button-arrow.css
+++ b/blocks/about/__button-arrow/about__button-arrow.css
@@ -1,3 +1,26 @@
 .about__button-arrow {
     display: none;
+    margin: 0;
+    padding: 0;
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    top: 116px;
+    border: none;
+    border-radius: 50%;
+    background-size: 36px 36px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: transparent;
+    box-shadow: 0px 4px 30px rgba(224, 240, 255, 0.1);
+    transition: all 0.3s ease-out;
+}
+
+.about__button-arrow:hover {
+    background-color: #009FAC;
+    cursor: pointer;
+}
+
+.about__button-arrow:active {
+    transform: scale(0.9);
 }
