feat: added css-styles for other screen resolution

--- a/blocks/footer/__authors/footer__authors.css
+++ b/blocks/footer/__authors/footer__authors.css
@@ -7,3 +7,18 @@
     padding: 0;
     margin: 41px 0 33px 0;
 }
+
+@media all and (min-width: 400px) {
+    .footer__authors {
+        margin: 41px 30px 64px 0;
+    }
+  } 
+
+@media all and (min-width: 650px) {
+    .footer__authors {
+        text-align: left;
+        margin: 0 37px 64px 0;
+        font-size: 14px;
+        line-height: 19px;
+    }
+  } 
