--- a/blocks/footer/__contact-info/footer__contact-info.css
+++ b/blocks/footer/__contact-info/footer__contact-info.css
@@ -1,3 +1,10 @@
 .footer__contact-info {
     max-width: 231px;
 }
+
+
+@media all and (min-width: 650px) {
+    .footer__contact-info {
+        max-width: 206px;
+    }
+  } 
