--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -4,4 +4,13 @@
     line-height: 20px;
     padding: 0 0 8px 0;
     margin: 0;
+    max-width: 240px;
 }
+
+@media all and (min-width: 650px) {
+    .footer__text {
+        font-size: 14px;
+        line-height: 19px;
+        padding: 0 0 15px 0;
+    }
+  } 
