--- a/blocks/footer/__title-text/footer__title-text.css
+++ b/blocks/footer/__title-text/footer__title-text.css
@@ -5,3 +5,13 @@
     margin: 0;
     padding: 0 0 8px 0;
 }
+
+
+@media all and (min-width: 650px) {
+    .footer__title-text {
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 20px;
+        padding: 0 0 12px 0;
+    }
+  } 
