--- a/blocks/ai-research/__title/_type/ai-research__title_type_card.css
+++ b/blocks/ai-research/__title/_type/ai-research__title_type_card.css
@@ -1,16 +1,22 @@
 .ai-research__title_type_card {
     max-width: 120px;
+    height: 28px;
     font-size: 10px;
     line-height: 14px;
     margin-top: 10px;
     position: relative;
     z-index: 2;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 @media screen and (min-width: 768px) {
     .ai-research__title_type_card {
         max-width: 126.6px;
-        min-height: 32px;
+        height: 32px;
         font-size: 12px;
         line-height: 16px;
         margin-top: 12px;
@@ -21,7 +27,7 @@
 @media screen and (min-width: 1440px) {
     .ai-research__title_type_card {
         max-width: 215px;
-        min-height: 60px;
+        height: 60px;
         font-size: 18px;
         line-height: 30px;
         margin-top: 30px;
