--- a/pages/index.css
+++ b/pages/index.css
@@ -30,3 +30,13 @@
 @import url(../blocks/ai-research/__icon/ai-research__icon.css);
 @import url(../blocks/ai-research/__paragraph/_type/ai-research__paragraph_type_card.css);
 @import url(../blocks/ai-research/__button/ai-research__button.css);
+
+/*communication*/
+@import url(../blocks/communication/communication.css);
+@import url(../blocks/communication/__button/communication__button.css);
+@import url(../blocks/communication/__form/communication__form.css);
+@import url(../blocks/communication/__input/communication__input.css);
+@import url(../blocks/communication/__input/_type/communication__input_type_message.css);
+@import url(../blocks/communication/__text/communication__text.css);
+@import url(../blocks/communication/__title/communication__title.css);
+
