--- a/blocks/communication/__input/communication__input.css
+++ b/blocks/communication/__input/communication__input.css
@@ -1,15 +1,20 @@
 .communication__input {
-    font-size: 12px;
-    line-height: 16px;
-    text-justify: distribute;
-    color: #009FAC;
     margin-bottom: 12px;
     border: none;
     border-radius: 5px;
-    height: 44px;
+    height: 42px;
     padding-left: 10px;
     width: 276px;
 }
+
+.communication__input::placeholder {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 16px;
+    text-justify: distribute;
+    color: #009FAC;
+}
+
 
 @media all and (min-width: 418px) {
     .communication__input {
