--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -2,6 +2,8 @@
     font-weight: 400;
     font-size: 12px;
     line-height: 20px;
+    line-height: 20px;
+    letter-spacing: 0.1px;
     padding: 0 0 8px 0;
     margin: 0;
     max-width: 240px;
