--- a/blocks/communication/__title/communication__title.css
+++ b/blocks/communication/__title/communication__title.css
@@ -12,3 +12,11 @@
         margin: 60px 0 37px 0;
     }
 }
+
+@media all and (min-width: 950px) {
+    .communication__title {
+        font-size: 36px;
+        line-height: 68px;
+        margin: 80px 0 37px 0;
+    }
+}
