--- a/blocks/communication/__text/communication__text.css
+++ b/blocks/communication/__text/communication__text.css
@@ -13,3 +13,14 @@
         letter-spacing: 0.1px;
     }
 }
+
+@media all and (min-width: 1200px) {
+    .communication__text {
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 30px;
+        max-width: 919px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
