feat: add our-projects primitive structure

--- a/pages/index.css
+++ b/pages/index.css
@@ -71,3 +71,18 @@
 @import url(../blocks/popup/__element/popup__element.css);
 @import url(../blocks/popup/__exit/popup__exit.css);
 @import url(../blocks/popup/__overlay/popup__overlay.css);
+
+/* our-projects */
+@import url(../blocks/our-projects/our-projects.css);
+@import url(../blocks/our-projects/__title/our-projects__title.css);
+@import url(../blocks/our-projects/__button/our-projects__button.css);
+@import url(../blocks/our-projects/__menu/our-projects__menu.css);
+@import url(../blocks/our-projects/__icon/our-projects__icon.css);
+@import url(../blocks/our-projects/__container/our-projects__container.css);
+@import url(../blocks/our-projects/__navigation/our-projects__navigation.css);
+
+/* our-projects: template */
+@import url(../blocks/our-projects/__item/our-projects__item.css);
+@import url(../blocks/our-projects/__logo/our-projects__logo.css);
+@import url(../blocks/our-projects/__text/our-projects__text.css);
+@import url(../blocks/our-projects/__detail/our-projects__detail.css);
