--- a/blocks/navigation-container/__detail/navigation-container__detail.css
+++ b/blocks/navigation-container/__detail/navigation-container__detail.css
@@ -1,4 +1,4 @@
-.our-projects__detail {
+.navigation-container__detail {
     width: 20px;
     height: 20px;
     background-image: url(../../../images/our-projects/our-projects__detail.svg);
